--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 <body>
 
   <h1>Product List</h1>
-  <div id="product-container" class="container"></div>
+  <input 
+  type="text" 
+  id="searchInput" 
+  placeholder="Search products..." 
+/>
+
+<div id="product-container" class="container"></div>
+
 
   <script src="index.js"></script>
 </body>
