Added search  history and completed search function

--- a/index.html
+++ b/index.html
@@ -18,12 +18,22 @@
     />
     <button onclick="handleSearch()">Search</button>
     <button onclick="clearHistory()">Clear Search History</button>
+
+    
+    <button onclick="window.location.href='search.html'">
+      Open Search Page
+    </button>
   </div>
 
   <h3>Search History</h3>
+  <button onclick="window.location.href='history.html'">
+    Search History
+  </button>
   <div id="search-history"></div>
 
   <div id="product-container" class="container"></div>
+ 
+  
 
   <script src="index.js"></script>
 </body>
