Added pagination to the site

--- a/index.html
+++ b/index.html
@@ -11,29 +11,26 @@
   <h1>Product List</h1>
 
   <div class="search-bar">
-    <input 
-      type="text" 
-      id="searchInput" 
-      placeholder="Search products..." 
+    <input
+      type="text"
+      id="searchInput"
+      placeholder="Search products..."
     />
     <button onclick="handleSearch()">Search</button>
     <button onclick="clearHistory()">Clear Search History</button>
-
-    
-    <button onclick="window.location.href='search.html'">
-      Open Search Page
-    </button>
+    <button onclick="window.location.href='history.html'">Search History</button>
   </div>
 
-  <h3>Search History</h3>
-  <button onclick="window.location.href='history.html'">
-    Search History
-  </button>
   <div id="search-history"></div>
 
   <div id="product-container" class="container"></div>
- 
-  
+
+  <!-- Pagination -->
+  <div class="pagination">
+    <button id="prevBtn">Previous</button>
+    <span id="pageInfo"></span>
+    <button id="nextBtn">Next</button>
+  </div>
 
   <script src="index.js"></script>
 </body>
