Added view history functionality

--- a/index.html
+++ b/index.html
@@ -16,16 +16,20 @@
       id="searchInput"
       placeholder="Search products..."
     />
+
     <button onclick="handleSearch()">Search</button>
     <button onclick="clearHistory()">Clear Search History</button>
     <button onclick="window.location.href='history.html'">Search History</button>
+    <button onclick="window.location.href='viewhistory.html'">
+      View History
+    </button>
   </div>
 
+  <h2>Search History</h2>
   <div id="search-history"></div>
 
   <div id="product-container" class="container"></div>
 
-  
   <div class="pagination">
     <button id="prevBtn">Previous</button>
     <span id="pageInfo"></span>
